--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Aichu Tan - My Portfolio</title>
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./main.css" />
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" >
   </head>
   <body>
     <nav>
@@ -17,7 +16,8 @@
     <main>
         <div class="container">
 
-
+{{ content }}
+          
     </main>
 </div>
     <footer>
