--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" >
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
+<nav>
+  <ul>
+    <li><a href="{{ '/index.html' | relative_url }}">Home</a></li>
+    <li><a href="{{ '/about/' | relative_url }}">About</a></li>
+    <li><a href="{{ '/cv/' | relative_url }}">CV</a></li>
+    <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+  </ul>
+</nav>
     <main>
         <div class="container">
 
